descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-09-XX  Release 7.18.0                                     ---
----------------------------------------------------------------------

* increased optimized package run-time performance - Sean Morrison
* fixed crash when raytracing multiple frames - Keith Bowman
* fixed mged zap crash while using preview - Keith Bowman, Bob Parker
* added ability to toggle mged status bar via .mgedrc - Rob Shinn
* new mged 'bot' command for accessing BoT properties - Nicholas Reed


----------------------------------------------------------------------
--- 2010-08-04  Release 7.16.10                                    ---
----------------------------------------------------------------------

The release concludes a phenomenal effort by Jesica Guidice who
meticulously translated approximately 150 pages of MGED tutorial
documentation from English to Spanish.  The 16 tutorials are now fully
converted and work continues on the technical side to develop
stylesheets for publishing corresponding PDF documents on the BRL-CAD
website.

* fixed nirt output formatting in MGED - Cliff Yapp
* rt can now output directly to PNG, among others - Erik Greenwald
* fixed crash-on-exit bug with iges-g importer - Richard Weiss
* fixed framebuffer shutdown and memory management bugs - Bob Parker
* added all remaining shape tools to the Windows build - Sean Morrison
* libpng updated from version 1.4.1 to 1.4.3 - Sean Morrison
* fixed crash tessellating pipes with maximum bends - John Anderson
* mged 'red' command no longer deletes custom attributes - Cliff Yapp
* fixed pixhalve memory leak and corruption on exit - Sean Morrison
* spanish translation for tutorial 9 - Jesica Giudice, Luciano Lamaita
* Tcl/Tk updated from 8.5.6 to 8.5.8 - Cliff Yapp